--- a/main.html
+++ b/main.html
@@ -8,7 +8,19 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+    <div>
+		<h1 id="f1">Flowers photos</h1>
+		<p>Flowers, the reproductive structures of flowering 
+			plants, are fascinating biological components. They typically consist of petals,
+			sepals, stamens (the male reproductive part), and a pistil (the female reproductive part)</p>
+	</div>
+	<div>
+		<h1 id="f2">Roses pictures</h1>
+		<p>Flowers, the reproductive structures of flowering plants, are fascinating 
+			biological components. They typically consist of petals, 
+			sepals, stamens (the male reproductive part), and a pistil (the female reproductive part)</p>
+	</div>
+	<script type="text/javascript" src="./script.js">
 </script>
 
 </body>
