--- a/main.html
+++ b/main.html
@@ -1,28 +1,52 @@
 <!DOCTYPE html>
-
 <html>
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <title>Flower Page</title>
+  <style>
+    body {
+      background-color: yellow;
+      text-align: center;
+    }
+
+    div {
+      margin: 20px;
+      padding: 10px;
+    }
+
+    #f1 {
+      color: red;
+    }
+
+    #f2 {
+      color: darkgreen;
+    }
+
+    p {
+      font-size: 18px;
+      line-height: 1.6;
+    }
+  </style>
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <div>
-		<h1 id="f1">Flowers photos</h1>
-		<p>Flowers, the reproductive structures of flowering 
-			plants, are fascinating biological components. They typically consist of petals,
-			sepals, stamens (the male reproductive part), and a pistil (the female reproductive part)</p>
-	</div>
-	<div>
-		<h1 id="f2">Roses pictures</h1>
-		<p>Flowers, the reproductive structures of flowering plants, are fascinating 
-			biological components. They typically consist of petals, 
-			sepals, stamens (the male reproductive part), and a pistil (the female reproductive part)</p>
-	</div>
-	<script type="text/javascript" src="./script.js">
-</script>
+  <div>
+    <h1 id="f1">Flowers photos</h1>
+    <p>
+      Flowers, the reproductive structures of flowering
+      plants, are fascinating biological components. They typically consist of petals,
+      sepals, stamens (the male reproductive part), and a pistil (the female reproductive part).
+    </p>
+  </div>
 
+  <div>
+    <h1 id="f2">Roses pictures</h1>
+    <p>
+      Flowers, the reproductive structures of flowering plants, are fascinating
+      biological components. They typically consist of petals,
+      sepals, stamens (the male reproductive part), and a pistil (the female reproductive part).
+    </p>
+  </div>
 </body>
 
 </html>
